--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "keystone",
-  "type": "commonjs",
-  "version": "1.3.0",
+  "version": "2.0.0",
   "scripts": {
     "dev": "npm-run-all --parallel vite_dev shopify_dev",
-    "pull": "shopify theme pull --nodelete --store brickspacetestingstore.myshopify.com",
-    "shopify_dev": "shopify theme dev --store brickspacetestingstore.myshopify.com",
+    "pull": "shopify theme pull --nodelete --store high-variant-combined-testing-store.myshopify.com",
+    "shopify_dev": "shopify theme dev --store high-variant-combined-testing-store.myshopify.com",
     "vite_dev": "vite dev",
     "test": "vitest",
     "coverage": "vitest run --coverage",
@@ -31,18 +30,18 @@
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.13",
-    "vite": "^4.2.0",
-    "vite-plugin-shopify": "^2.0.2",
+    "vite": "^5.0.0",
+    "vite-plugin-shopify": "^3.1.0",
     "vitest": "^0.29.7"
   },
   "dependencies": {
-    "@alpinejs/focus": "^3.12.0",
-    "@alpinejs/intersect": "^3.12.0",
-    "@alpinejs/persist": "^3.12.0",
-    "alpinejs": "^3.12.0",
-    "instant.page": "5.1.1"
+    "@alpinejs/focus": "^3.14.9",
+    "@alpinejs/intersect": "^3.14.9",
+    "@alpinejs/persist": "^3.14.9",
+    "alpinejs": "^3.14.9",
+    "instant.page": "5.2.0"
   },
   "config": {
-    "store": "brickspacetestingstore.myshopify.com"
+    "store": "high-variant-combined-testing-store.myshopify.com"
   }
 }
