--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "keystone",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "scripts": {
     "dev": "npm-run-all --parallel vite_dev shopify_dev",
-    "pull": "shopify theme pull --nodelete --store high-variant-combined-testing-store.myshopify.com",
-    "shopify_dev": "shopify theme dev --store high-variant-combined-testing-store.myshopify.com",
+    "pull": "shopify theme pull --nodelete --store brickspacetestingstore.myshopify.com",
+    "shopify_dev": "shopify theme dev --store brickspacetestingstore.myshopify.com",
     "vite_dev": "vite dev",
     "test": "vitest",
     "coverage": "vitest run --coverage",
@@ -42,6 +42,6 @@
     "instant.page": "5.2.0"
   },
   "config": {
-    "store": "high-variant-combined-testing-store.myshopify.com"
+    "store": "brickspacetestingstore.myshopify.com"
   }
 }
